SFDEV/force-app/main/default/objects/testobj__c/testobj__c.object-meta.xml
<CustomObject>
    <label>testobj</label>
    <nameField>
        <label>testobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testobjs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>