SFDEV/force-app/main/default/objects/testobj__c/fields/accountlookup__c.field-meta.xml
<CustomField>
    <fullName>accountlookup__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>testobjs</relationshipLabel>
    <relationshipName>testobjs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>