SFDEV/force-app/main/default/objects/testobj__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Statefd__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bang</fullName>
            </value>
            <value>
                <fullName>Mys</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
            <value>
                <fullName>chennai</fullName>
            </value>
            <value>
                <fullName>hyd</fullName>
            </value>
            <value>
                <fullName>city1</fullName>
            </value>
            <value>
                <fullName>city2</fullName>
            </value>
            <value>
                <fullName>city3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>