SFDEV/force-app/main/default/objects/testobj__c/fields/Contactmd__c.field-meta.xml
<CustomField>
    <fullName>Contactmd__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>testobjs</relationshipLabel>
    <relationshipName>testobjs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>