SFDEV/force-app/main/default/objects/testobj__c/fields/datetime__c.field-meta.xml
<CustomField>
    <fullName>datetime__c</fullName>
    <label>datetime</label>
    <type>DateTime</type>
</CustomField>