SFDEV/force-app/main/default/objects/testobj__c/fields/desc__c.field-meta.xml
<CustomField>
    <fullName>desc__c</fullName>
    <label>desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>