SFDEV/force-app/main/default/objects/testobj__c/fields/distance_travelled__c.field-meta.xml
<CustomField>
    <fullName>distance_travelled__c</fullName>
    <label>distance travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>