SFDEV/force-app/main/default/objects/testobj__c/fields/geo__c.field-meta.xml
<CustomField>
    <fullName>geo__c</fullName>
    <label>geo</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>