SFDEV/force-app/main/default/objects/testobj__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <displayFormat>test-{0000}</displayFormat>
    <label>id</label>
    <type>AutoNumber</type>
</CustomField>