SFDEV/force-app/main/default/objects/testobj__c/fields/required__c.field-meta.xml
<CustomField>
    <fullName>required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>required??</label>
    <type>Checkbox</type>
</CustomField>