SFDEV/force-app/main/default/objects/testobj__c/fields/rich__c.field-meta.xml
<CustomField>
    <fullName>rich__c</fullName>
    <label>rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>