SFDEV/force-app/main/default/objects/testobj__c/fields/Statefd__c.field-meta.xml
<CustomField>
    <fullName>Statefd__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KA</fullName>
            </value>
            <value>
                <fullName>MH</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Missispi</fullName>
            </value>
            <value>
                <fullName>ALalabama</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>