SFDEV/force-app/main/default/objects/testobj__c/fields/testobjself__c.field-meta.xml
<CustomField>
    <fullName>testobjself__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>testobj</label>
    <referenceTo>testobj__c</referenceTo>
    <relationshipLabel>testobjs</relationshipLabel>
    <relationshipName>testobjs</relationshipName>
    <type>Lookup</type>
</CustomField>