SFDEV/force-app/main/default/objects/testobj__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mh</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
            <value>
                <fullName>tn</fullName>
            </value>
            <value>
                <fullName>ap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>