SFDEV/force-app/main/default/objects/testobj__c/validationRules/Amount_Field_not_blank_and_not_less_than.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Field_not_blank_and_not_less_than</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Amount__c )   ||  Amount__c  &lt;= 100</errorConditionFormula>
    <errorMessage>Amount should not be blank and above 100 rupees</errorMessage>
</ValidationRule>